k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cycling-training-app
  namespace: cycling-training-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: cycling.kvarnberg.labs
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cycling-training-app
                port:
                  number: 8000
